Fixed testimonial flex properties/spacing

--- a/style.css
+++ b/style.css
@@ -99,13 +99,23 @@ img {
     flex-direction: column;
 }
 
+.testimonial {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
 .testimonial-title {
     display: flex;
     justify-content: center;
 }
 
-.icons {
+.container {
     display: flex;
+    flex-direction: column;
+    width: 100px;
+    padding: 20px;
+    text-align: center;
 }
 
 .square {
@@ -122,7 +132,7 @@ img {
       color: #1f2937;
   }
 
-/* QUOTE SECTION */
+/* WISDOM SECTION */
 
 /* ACTION SECTION */
 
